--- a/woorischool/Cells/VIews/ReReplyTableViewCell.xib
+++ b/woorischool/Cells/VIews/ReReplyTableViewCell.xib
@@ -24,14 +24,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="replyIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Hde-3a-Fzf">
-                        <rect key="frame" x="0.0" y="55" width="18" height="18"/>
+                        <rect key="frame" x="0.0" y="14" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="18" id="ZqW-Rn-Bgg"/>
                             <constraint firstAttribute="height" constant="18" id="vjU-dD-9SH"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w9J-QZ-APZ" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                        <rect key="frame" x="71" y="0.0" width="249" height="128"/>
+                        <rect key="frame" x="71" y="0.0" width="249" height="46"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8V-qr-Q3h">
                                 <rect key="frame" x="13" y="5" width="32" height="15.5"/>
@@ -40,7 +40,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="AzZ-lT-ZeD">
-                                <rect key="frame" x="13" y="25.5" width="216" height="97.5"/>
+                                <rect key="frame" x="13" y="25.5" width="216" height="15.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Labelffsafsadfasfasfadsfsafa" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uwX-sO-hMX">
                                         <rect key="frame" x="0.0" y="0.0" width="216" height="15.5"/>
@@ -48,7 +48,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdF-L4-aMR">
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdF-L4-aMR">
                                         <rect key="frame" x="0.0" y="15.5" width="216" height="82"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fiM-a8-WRg">
@@ -85,14 +85,14 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="zkV-gG-r6o">
-                        <rect key="frame" x="29" y="46.5" width="35" height="35"/>
+                        <rect key="frame" x="29" y="5.5" width="35" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="Zwi-ks-sRV"/>
                             <constraint firstAttribute="width" constant="35" id="fGs-ny-MPt"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019.03.21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEm-xz-HKW">
-                        <rect key="frame" x="259.5" y="128" width="60.5" height="14"/>
+                        <rect key="frame" x="259.5" y="46" width="60.5" height="14"/>
                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="12"/>
                         <color key="textColor" name="brownGrey"/>
                         <nil key="highlightedColor"/>
