--- a/woorischool/Cells/VIews/SPHomeClassInfoCollectionViewCell.xib
+++ b/woorischool/Cells/VIews/SPHomeClassInfoCollectionViewCell.xib
@@ -172,7 +172,7 @@
             <color red="0.19607843137254902" green="0.61568627450980395" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="dodgerBlue12">
-            <color red="0.19607843137254902" green="0.61568627450980395" blue="1" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.19607843137254902" green="0.61568627450980395" blue="1" alpha="0.11999999731779099" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="grapefruit">
             <color red="0.94901960784313721" green="0.40392156862745099" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
