--- a/woorischool/CustomView/CustomInputView.xib
+++ b/woorischool/CustomView/CustomInputView.xib
@@ -19,48 +19,10 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c5y-LI-TZd">
-                    <rect key="frame" x="0.0" y="44" width="414" height="759"/>
-                    <subviews>
-                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bDM-M8-2gX">
-                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="144"/>
-                            <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flame" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="g0b-ui-Sxj">
-                                    <rect key="frame" x="-60" y="11" width="120" height="120.5"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="120" id="3WO-nt-TMC"/>
-                                        <constraint firstAttribute="height" constant="120" id="a8u-Gz-vzr"/>
-                                    </constraints>
-                                </imageView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jhi-J9-sjG">
-                                    <rect key="frame" x="-39" y="0.0" width="39" height="39"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="39" id="0r9-1Z-V6L"/>
-                                        <constraint firstAttribute="height" constant="39" id="v9d-m8-PEj"/>
-                                    </constraints>
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <inset key="imageEdgeInsets" minX="12" minY="12" maxX="12" maxY="12"/>
-                                    <state key="normal" image="xIcon"/>
-                                    <connections>
-                                        <action selector="hideEmoviewEvent" destination="-1" eventType="touchUpInside" id="A4h-6F-kb6"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" name="black60"/>
-                            <constraints>
-                                <constraint firstItem="g0b-ui-Sxj" firstAttribute="centerX" secondItem="bDM-M8-2gX" secondAttribute="centerX" id="A3i-1B-5Ja"/>
-                                <constraint firstItem="jhi-J9-sjG" firstAttribute="top" secondItem="bDM-M8-2gX" secondAttribute="top" id="hIX-SL-bp3"/>
-                                <constraint firstAttribute="height" constant="144" id="iaJ-13-5CC"/>
-                                <constraint firstItem="g0b-ui-Sxj" firstAttribute="centerY" secondItem="bDM-M8-2gX" secondAttribute="centerY" id="rEF-xp-er9"/>
-                                <constraint firstAttribute="trailing" secondItem="jhi-J9-sjG" secondAttribute="trailing" id="w8t-1o-LQ7"/>
-                            </constraints>
-                        </view>
-                    </subviews>
-                </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OHk-op-xYY">
                     <rect key="frame" x="0.0" y="803" width="414" height="1"/>
                     <color key="backgroundColor" name="veryLightPink"/>
@@ -80,10 +42,10 @@
                         <action selector="showCameraViewEvent" destination="-1" eventType="touchUpInside" id="YKz-vg-tKr"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOd-Lf-4A8" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOd-Lf-4A8" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
                     <rect key="frame" x="54" y="812" width="348" height="42"/>
                     <subviews>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6en-mT-Ujw">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="always" bouncesZoom="NO" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6en-mT-Ujw">
                             <rect key="frame" x="18" y="6" width="255" height="30"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
@@ -136,6 +98,44 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c5y-LI-TZd">
+                    <rect key="frame" x="0.0" y="44" width="414" height="759"/>
+                    <subviews>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bDM-M8-2gX">
+                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="144"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flame" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="g0b-ui-Sxj">
+                                    <rect key="frame" x="-60" y="11" width="120" height="120.5"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="120" id="3WO-nt-TMC"/>
+                                        <constraint firstAttribute="height" constant="120" id="a8u-Gz-vzr"/>
+                                    </constraints>
+                                </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jhi-J9-sjG">
+                                    <rect key="frame" x="-39" y="0.0" width="39" height="39"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="39" id="0r9-1Z-V6L"/>
+                                        <constraint firstAttribute="height" constant="39" id="v9d-m8-PEj"/>
+                                    </constraints>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <inset key="imageEdgeInsets" minX="12" minY="12" maxX="12" maxY="12"/>
+                                    <state key="normal" image="xIcon"/>
+                                    <connections>
+                                        <action selector="hideEmoviewEvent" destination="-1" eventType="touchUpInside" id="A4h-6F-kb6"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" name="black60"/>
+                            <constraints>
+                                <constraint firstItem="g0b-ui-Sxj" firstAttribute="centerX" secondItem="bDM-M8-2gX" secondAttribute="centerX" id="A3i-1B-5Ja"/>
+                                <constraint firstItem="jhi-J9-sjG" firstAttribute="top" secondItem="bDM-M8-2gX" secondAttribute="top" id="hIX-SL-bp3"/>
+                                <constraint firstAttribute="height" constant="144" id="iaJ-13-5CC"/>
+                                <constraint firstItem="g0b-ui-Sxj" firstAttribute="centerY" secondItem="bDM-M8-2gX" secondAttribute="centerY" id="rEF-xp-er9"/>
+                                <constraint firstAttribute="trailing" secondItem="jhi-J9-sjG" secondAttribute="trailing" id="w8t-1o-LQ7"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                </stackView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -148,7 +148,7 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="AOd-Lf-4A8" secondAttribute="trailing" constant="12" id="OFI-Tn-5ne"/>
                 <constraint firstItem="c5y-LI-TZd" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="TLy-Qh-xXx"/>
                 <constraint firstAttribute="trailing" secondItem="OHk-op-xYY" secondAttribute="trailing" id="U11-Ue-ckI"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="AOd-Lf-4A8" secondAttribute="bottom" constant="8" id="XYD-Xo-ZT8"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="AOd-Lf-4A8" secondAttribute="bottom" constant="8" identifier="testCostraint" id="XYD-Xo-ZT8"/>
                 <constraint firstItem="yzW-oh-8oX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="13" id="k3t-oC-CXr"/>
                 <constraint firstItem="AOd-Lf-4A8" firstAttribute="leading" secondItem="yzW-oh-8oX" secondAttribute="trailing" constant="9" id="qVP-TE-DeI"/>
             </constraints>
