--- a/woorischool/Views/Parents/ModalViews/ParentsEnrolmentClassViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsEnrolmentClassViewController.xib
@@ -143,7 +143,7 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6e-OM-s12" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6e-OM-s12" customClass="CustomGradientButton" customModule="우리스쿨" customModuleProvider="target">
                     <rect key="frame" x="14" y="359.5" width="386" height="54"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="54" id="fEG-wL-dQS"/>
